tests/analyzer/errors/invalid_call_target.ray
fn main() {
    5()
    true()
    (5 - 56)()
}
